# data-generator

./: README.md  main.py  master_node.py  pyproject.toml  support_field_types.txt  tasks.db  utils.py
config/: __init__.py  basic_config.py  engineConfig.ini  serverConfig.ini
database/: __init__.py  sqllite3.py  tasks.db
docs/: data-type.md  pre-alternative.md  project-construct.md  task-configration.md
html_json_config/: index.html  task_view.json
metrics/: __init__.py  prometheus_metrics.py
src/: __init__.py
src/com/desmond/models/: __init__.py
src/com_desmond/: main.py  node.py
src/com_desmond/cutomer_data_type/: CustomerDataType.py  __init__.py
src/com_desmond/enums/: DataDistributionEnum.py  DataTypeEnum.py  TaskPlanStatus.py  output_type_enum.py
src/com_desmond/exceptions/: __init__.py  exceptions.py
src/com_desmond/models/: Fields.py  TaskModel.py  __init__.py  data_model.py
src/com_desmond/services/: output.py  output_models.py  tasks_config_file_scan.py
src/com_desmond/services/config_parsers/: ConfigParser.py
src/com_desmond/services/engine/: engine.py
src/com_desmond/services/executor/: TaskExecutor.py  __init__.py
src/com_desmond/utils/: __init__.py  file_util.py
static/html_json_config/: index.html  task_view.json
static/sdk/locale/: de-DE.js
tasks_repository/: test.json  test003.json  test005.json  test007.json  test008.json  test009.json  test02.json  test_task.json
tasks_running/: test_task.json
tests/: testFunction.py  test_amis.py  test_fields.py  test_tasks_config_file_scan.py
vo/: __init__.py  vo.py
(+4 files in other folders)
