[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["desmond.zhan <desmond.zhan@cloudwise.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^23.3.0"
fastapi = "^0.110.0"
confluent-kafka = "^2.3.0"
watchdog = "^4.0.0"
pytest = "^8.0.2"
pydantic = "^2.6.3"
ujson = "^5.9.0"
amis = "^0.1.1"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
sqlalchemy = "^2.0.28"

[[tool.poetry.source]]
name="ali"
url="https://mirrors.aliyun.com/pypi/simple/"
priority="primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
